# recoverr

./: .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: slam_quickstart.py
src/recoverr/: __init__.py  baseline.py  events.py  heldout.py  io.py  nulls.py  pipeline.py  recovery.py  reliability.py  schema.py  sim.py
tests/: test_ademp.py  test_core.py  test_io.py  test_m2.py  test_smoke.py
